Removed unnecessary ports and binds

--- a/docker-compose-sample.yml
+++ b/docker-compose-sample.yml
@@ -7,10 +7,9 @@ services:
             - SYS_NICE
         ports:
             - "40772:40772"
-            - "9229:9229"
         volumes:
             - ./mirakurun/conf:/app-config
-            - ./mirakurun/data:/app-data
+            #- ./mirakurun/data:/app-data
         environment:
             TZ: "Asia/Tokyo"
         devices:
@@ -24,8 +23,8 @@ services:
                 max-size: 10m
 
     mysql:
-        image: mariadb:10.5
-        # image: mysql:8.0 # 囲み文字を使用する場合
+        # image: mariadb:10.5
+        image: mysql:8.0 # 囲み文字を使用する場合
         volumes:
             - mysql-db:/var/lib/mysql
         environment:
@@ -34,8 +33,8 @@ services:
             MYSQL_ROOT_PASSWORD: epgstation
             MYSQL_DATABASE: epgstation
             TZ: "Asia/Tokyo"
-        command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --performance-schema=false --expire_logs_days=1 # for mariadb
-        # command: --character-set-server=utf8mb4 --collation-server=utf8mb4_0900_as_ci --performance-schema=false --expire_logs_days=1 --default-authentication-plugin=mysql_native_password # for myql
+        # command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --performance-schema=false --expire_logs_days=1 # for mariadb
+        command: --character-set-server=utf8mb4 --collation-server=utf8mb4_0900_as_ci --performance-schema=false --expire_logs_days=1 --default-authentication-plugin=mysql_native_password # for myql
         restart: always
         logging:
             options:
@@ -48,8 +47,8 @@ services:
             dockerfile: "debian.Dockerfile"
         volumes:
             - ./epgstation/config:/app/config
-            - ./epgstation/data:/app/data
-            - ./epgstation/thumbnail:/app/thumbnail
+            #- ./epgstation/data:/app/data
+            #- ./epgstation/thumbnail:/app/thumbnail
             - ./epgstation/logs:/app/logs
             - ./recorded:/app/recorded
         environment:
@@ -59,7 +58,7 @@ services:
             - mysql
         ports:
             - "8888:8888"
-            - "8889:8889"
+            #- "8889:8889"
 #         user: "1000:1000"
 #         devices:
 #             - /dev/dri:/dev/dri
@@ -68,4 +67,3 @@ services:
 volumes:
     mysql-db:
         driver: local
-
